Update: with new data from Dani's lab

--- a/report.html
+++ b/report.html
@@ -72,7 +72,7 @@
 <p>Loggers:</p>
 </div>
 <div class="paragraph">
-<p>#{:R08 :R15 :R06 :R16 :FR6 :R05 :R12 :R20 :R11 :FR1 :R14 :FR4 :FR5 :R10 :FR3 :R13 :R09 :FR2 :R19 :R02 :R07 :R04 :R03 :R01}</p>
+<p>#{:R08 :R15 :MTECH4 :R06 :R16 :NONE :FR6 :R05 :R12 :R20 :R11 :FR1 :R14 :MTECH2 :MTECH1 :nil :FR4 :FR5 :R10 :FR3 :R13 :R09 :FR2 :R19 :MTECH3 :R02 :R07 :R04 :R03 :R01}</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -86,12 +86,22 @@
 </div>
 <div class="imageblock">
 <div class="content">
+<img src="out/MTECH4.svg" alt="MTECH4">
+</div>
+</div>
+<div class="imageblock">
+<div class="content">
 <img src="out/R06.svg" alt="R06">
 </div>
 </div>
 <div class="imageblock">
 <div class="content">
 <img src="out/R16.svg" alt="R16">
+</div>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="out/NONE.svg" alt="NONE">
 </div>
 </div>
 <div class="imageblock">
@@ -127,6 +137,21 @@
 <div class="imageblock">
 <div class="content">
 <img src="out/R14.svg" alt="R14">
+</div>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="out/MTECH2.svg" alt="MTECH2">
+</div>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="out/MTECH1.svg" alt="MTECH1">
+</div>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="out/nil.svg" alt="nil">
 </div>
 </div>
 <div class="imageblock">
@@ -171,6 +196,11 @@
 </div>
 <div class="imageblock">
 <div class="content">
+<img src="out/MTECH3.svg" alt="MTECH3">
+</div>
+</div>
+<div class="imageblock">
+<div class="content">
 <img src="out/R02.svg" alt="R02">
 </div>
 </div>
@@ -199,7 +229,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-07-10 20:36:58 +0800
+Last updated 2025-02-25 17:57:23 +0800
 </div>
 </div>
 </body>
